# http2smtp_sending

./: .gitignore  Cargo.toml  calendar.ics  readme.md
configuration/: base-temp.yaml
src/: configuration.rs  email_content.rs  lib.rs  main.rs  setup.rs
src/email/: api_models.rs  domain.rs  mod.rs  response.rs  transport.rs
src/send_email/: message.rs  message_id.rs  mod.rs  service.rs  smtp.rs
src/service/: auth.rs  email_front.rs  email_mapper.rs  email_provider.rs  email_send.rs  email_service.rs  errors.rs  mod.rs  smtp_provider.rs
src/telemetry/: init.rs  mod.rs  span.rs
