[package]
name = "lettre_try"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path="src/lib.rs"
[[bin]]
path = "src/main.rs"
name = "http2stmp"

[dependencies]
mail-send = "*"
tokio= {version="1",features= ["macros","rt-multi-thread"] }
actix-web="4"
config = "0.13.3"
serde= {version="1",features= ["derive"]}
secrecy= {version="0.8",features= ["serde"] }
serde-aux="4"
sysinfo ="*"
chrono = {version="*",features= ["serde"]}
tracing= {version="0.1",features= ["log"] }
tracing-subscriber= {version="0.3",features= ["registry","env-filter"] }
tracing-bunyan-formatter="0.3"
tracing-log="0.1"
tracing-actix-web="0.7.2"



[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
