[package]
name = "lettre_try"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path="src/lib.rs"
[[bin]]
path = "src/main.rs"
name = "http2stmp"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
incremental = false



[dependencies]
mail-send = "0.5.2"
tokio= {version="1.49.0",features= ["macros","rt-multi-thread"] }
actix-web="4.13.0"
config = "0.15.19"
serde= {version="1.0.228",features= ["derive"]}
secrecy= {version="0.10.3",features= ["serde"] }
serde-aux="4.7.0"
chrono = {version="0.4.43",features= ["serde"]}
tracing= {version="0.1.44",features= ["log"] }
tracing-subscriber= {version="0.3.22",features= ["registry","env-filter"] }
tracing-bunyan-formatter="0.3.10"
tracing-log="0.2.0"
tracing-actix-web="0.7.21"
thiserror = "2.0.18"

[dependencies.uuid]
version = "1.21.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
